--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.0.0-beta.0",
     "copy-webpack-plugin": "^5.1.1",
+    "prop-types": "15.7.2",
     "pubsub-js": "^1.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "prop-types": "15.7.2"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-class-properties": "^7.10.1",
