--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,10 @@
 {
-  "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-        "@/*": ["src/*"]
-    }
-  },
-  "exclude": ["node_modules", "dist"]
+    "compilerOptions": {
+        "baseUrl": "./",
+        "paths": {
+            "@/*": ["src/*"]
+        },
+        "experimentalDecorators": true
+    },
+    "exclude": ["node_modules", "build"]
 }
